<resources>
    <string name="app_name">AEL4_Retrofit</string>
    <string name="search">Search</string>
    <string name="add_user">Add user</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="sqlite">SQLite</string>
    <string name="sugar">Sugar</string>
    <string name="room">Room</string>
    <string name="realm">Realm</string>
    <string name="async">Async</string>
</resources>
