<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="user name"
        android:inputType="text" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_user" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView android:text="@string/sqlite" />

            <Button
                android:id="@+id/sqlite_btn_save"
                android:text="@string/save" />

            <Button
                android:id="@+id/sqlite_btn_update"
                android:text="@string/update" />

            <Button
                android:id="@+id/sqlite_btn_delete"
                android:text="@string/delete" />
        </TableRow>

        <TextView android:id="@+id/sqlite_result" />

        <TableRow>

            <TextView android:text="@string/sugar" />

            <Button
                android:id="@+id/sugar_btn_save"
                android:text="@string/save" />

            <Button
                android:id="@+id/sugar_btn_update"
                android:text="@string/update" />

            <Button
                android:id="@+id/sugar_btn_delete"
                android:text="@string/delete" />
        </TableRow>

        <TextView android:id="@+id/sugar_result" />

        <TableRow>

            <TextView android:text="@string/realm" />

            <Button
                android:id="@+id/realm_btn_save"
                android:text="@string/save" />

            <Button
                android:id="@+id/realm_btn_update"
                android:text="@string/update" />

            <Button
                android:id="@+id/realm_btn_delete"
                android:text="@string/delete" />
            <Button
                android:id="@+id/realm_btn_async"
                android:text="@string/async" />
        </TableRow>

        <TextView android:id="@+id/realm_result" />

    </TableLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="500dp" />


</LinearLayout>